# rpg-tavern

./: .env.example  .gitignore  AGENT.md  ARCH-DESIGN.md  CLAUDE.md  README.md  TODOS.md  claude.md  conftest.py  main.py  package.json  pyproject.toml  pytest.ini  start.sh  tsconfig.client.json  tsconfig.json  vite.config.ts
backend/: app.py  characters.py  demo.py  llm.py  lorebook.py  mcp_server.py  pipeline.py  prompts.py  routes.py  storage.py
backend/pipeline/: __init__.py  core.py  extractors.py  segments.py
backend/routes/: __init__.py  adventures.py  characters.py  lorebook.py  models.py  personas.py  settings.py  story_roles.py  templates.py
backend/storage/: __init__.py  adventures.py  characters.py  config.py  core.py  lorebook.py  messages.py  story_roles.py  templates.py
docs/agent/: backend.md  frontend.md  mcp.md  pipeline.md
frontend/: index.html  package.json  vite.config.ts
presets/: adventure-names.txt
rpg_tavern/: llm.py  models.py  storage.py
scripts/: arch.sh  last.sh  routes.sh
src/: backend-kobold.ts  backend-openai.ts  backends.test.ts  backends.ts  chat.test.ts  chat.ts  events.test.ts  events.ts  extractor.ts  git.ts  lorebook-advanced.test.ts  lorebook.test.ts  lorebook.ts  pipeline.ts  renderers.ts  routes.ts  server.test.ts  server.ts  settings.test.ts  settings.ts
tests/: helpers.ts  lorebook-api.test.ts  preload.ts  server-lorebook.test.ts  test_characters.py  test_llm.py  test_lorebook.py  test_models.py  test_personas.py  test_pipeline.py  test_pipeline_flow.py  test_prompts.py  test_storage.py  test_tavern_scenario.py
(+105 files in other folders)
